--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,17 +1,38 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Tab 1
-    </ion-title>
-  </ion-toolbar>
+	<ion-toolbar>
+		<ion-title> Convertor </ion-title>
+	</ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
+	<ion-header collapse="condense">
+		<ion-toolbar>
+			<ion-title size="large">Convertor</ion-title>
+		</ion-toolbar>
+	</ion-header>
+	<div class="ion-text-center">
+		<ion-item>
+			<ion-label>Valor</ion-label>
+			<ion-input type="number"></ion-input> </ion-item
+		><ion-item>
+			<ion-label>Moeda</ion-label>
+			<ion-select placeholder="Select One">
+				<ion-select-option value="real">Real</ion-select-option>
+				<ion-select-option value="bitcoin">Bitcoin</ion-select-option>
+			</ion-select>
+		</ion-item>
+		<ion-item>
+			<ion-label>Valor</ion-label>
+			<ion-input type="number"></ion-input> </ion-item
+		><ion-item>
+			<ion-label>Moeda</ion-label>
+			<ion-select placeholder="Select One">
+				<ion-select-option value="real">Real</ion-select-option>
+				<ion-select-option value="bitcoin">Bitcoin</ion-select-option>
+			</ion-select>
+		</ion-item>
+		<ion-button color="success">Confirmar</ion-button>
+		<h3>Resultado: R$5000</h3>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+	</div>
 </ion-content>
