--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,17 +1,41 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Tab 2
-    </ion-title>
-  </ion-toolbar>
+	<ion-toolbar>
+		<ion-title> Home </ion-title>
+	</ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
-    </ion-toolbar>
-  </ion-header>
+	<ion-header collapse="condense">
+		<ion-toolbar>
+			<ion-title size="large">Home</ion-title>
+		</ion-toolbar>
+	</ion-header>
 
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+	<ion-card>
+		<ion-card-header>
+			<ion-card-subtitle>BITCOIN - BTC</ion-card-subtitle>
+			<ion-card-title>R$ 188.556</ion-card-title>
+		</ion-card-header>
+
+		<ion-card-content>
+			<img src="assets/img/grafico.png" />
+		</ion-card-content>
+	</ion-card>
+
+	<ion-card>
+		<ion-card-header>
+			<ion-card-subtitle>Ethererum</ion-card-subtitle>
+			<ion-card-title>R$ 5969</ion-card-title>
+		</ion-card-header>
+
+		<ion-card-content>
+			<img src="assets/img/grafico.png" />
+		</ion-card-content>
+	</ion-card>
+
+	<ion-fab vertical="bottom" horizontal="end" slot="fixed">
+		<ion-fab-button>
+			<ion-icon name="add"></ion-icon>
+		</ion-fab-button>
+	</ion-fab>
 </ion-content>
