--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,17 +1,17 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Tab 3
-    </ion-title>
-  </ion-toolbar>
+	<ion-toolbar>
+		<ion-title> Acessos </ion-title>
+	</ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+	<ion-header collapse="condense">
+		<ion-toolbar>
+			<ion-title size="large">Acessos</ion-title>
+		</ion-toolbar>
+	</ion-header>
+	<div class="ion-text-center">
+		<h1>Links Imporantes</h1>
+		<h2>www.mercadobitcoin.com.br</h2>
+	</div>
 </ion-content>
