Comunicação Básica com API

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -14,7 +14,7 @@
 	<ion-card>
 		<ion-card-header>
 			<ion-card-subtitle>BITCOIN - BTC</ion-card-subtitle>
-			<ion-card-title>R$ 188.556</ion-card-title>
+			<ion-card-title>R${{bitcoinValue}}</ion-card-title>
 		</ion-card-header>
 
 		<ion-card-content>
@@ -32,7 +32,6 @@
 			<img src="assets/img/grafico.png" />
 		</ion-card-content>
 	</ion-card>
-
 	<ion-fab vertical="bottom" horizontal="end" slot="fixed">
 		<ion-fab-button>
 			<ion-icon name="add"></ion-icon>
