--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -13,23 +13,103 @@
 
 	<ion-card>
 		<ion-card-header>
-			<ion-card-subtitle>BITCOIN - BTC</ion-card-subtitle>
-			<ion-card-title>R${{bitcoinValue}}</ion-card-title>
+			<ion-card-subtitle>Bitcoin</ion-card-subtitle>
+			<ion-card-title>R$ {{bitcoinValue}}</ion-card-title>
 		</ion-card-header>
 
 		<ion-card-content>
-			<img src="assets/img/grafico.png" />
+			<canvas></canvas>
 		</ion-card-content>
 	</ion-card>
 
 	<ion-card>
 		<ion-card-header>
-			<ion-card-subtitle>Ethererum</ion-card-subtitle>
-			<ion-card-title>R$ 5969</ion-card-title>
+			<ion-card-subtitle>Ethereum</ion-card-subtitle>
+			<ion-card-title>R$ {{ethereumValue}}</ion-card-title>
 		</ion-card-header>
 
 		<ion-card-content>
-			<img src="assets/img/grafico.png" />
+			<canvas></canvas>
+		</ion-card-content>
+	</ion-card>
+	<ion-card>
+		<ion-card-header>
+			<ion-card-subtitle>Bitcoin Cash</ion-card-subtitle>
+			<ion-card-title>R$ {{bitcoinCashValue}}</ion-card-title>
+		</ion-card-header>
+
+		<ion-card-content>
+			<canvas></canvas>
+		</ion-card-content>
+	</ion-card>
+	<ion-card>
+		<ion-card-header>
+			<ion-card-subtitle>Chiliz</ion-card-subtitle>
+			<ion-card-title>R$ {{chilizValue}}</ion-card-title>
+		</ion-card-header>
+
+		<ion-card-content>
+			<canvas></canvas>
+		</ion-card-content>
+	</ion-card>
+	<ion-card>
+		<ion-card-header>
+			<ion-card-subtitle>Chainlink</ion-card-subtitle>
+			<ion-card-title>R$ {{chainlinkValue}}</ion-card-title>
+		</ion-card-header>
+
+		<ion-card-content>
+			<canvas></canvas>
+		</ion-card-content>
+	</ion-card>
+	<ion-card>
+		<ion-card-header>
+			<ion-card-subtitle>Litecoin</ion-card-subtitle>
+			<ion-card-title>R$ {{litecoinValue}}</ion-card-title>
+		</ion-card-header>
+
+		<ion-card-content>
+			<canvas></canvas>
+		</ion-card-content>
+	</ion-card>
+	<ion-card>
+		<ion-card-header>
+			<ion-card-subtitle>Pax Gold</ion-card-subtitle>
+			<ion-card-title>R$ {{paxGoldValue}}</ion-card-title>
+		</ion-card-header>
+
+		<ion-card-content>
+			<canvas></canvas>
+		</ion-card-content>
+	</ion-card>
+	<ion-card>
+		<ion-card-header>
+			<ion-card-subtitle>USD Coin</ion-card-subtitle>
+			<ion-card-title>R$ {{usdCoinValue}}</ion-card-title>
+		</ion-card-header>
+
+		<ion-card-content>
+			<canvas></canvas>
+		</ion-card-content>
+	</ion-card>
+	<ion-card>
+		<ion-card-header>
+			<ion-card-subtitle>WiBX</ion-card-subtitle>
+			<ion-card-title>R$ {{wibxValue}}</ion-card-title>
+		</ion-card-header>
+
+		<ion-card-content>
+			<canvas></canvas>
+		</ion-card-content>
+	</ion-card>
+	<ion-card>
+		<ion-card-header>
+			<ion-card-subtitle>XRP</ion-card-subtitle>
+			<ion-card-title>R$ {{xrpValue}}</ion-card-title>
+		</ion-card-header>
+
+		<ion-card-content>
+			<canvas></canvas>
 		</ion-card-content>
 	</ion-card>
 	<ion-fab vertical="bottom" horizontal="end" slot="fixed">
