--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -18,7 +18,7 @@
 		</ion-card-header>
 
 		<ion-card-content>
-			<img src="assets/img/grafico.png" />
+			<google-chart [data]="pieChart"></google-chart>
 		</ion-card-content>
 	</ion-card>
 
@@ -27,9 +27,9 @@
 			<ion-card-subtitle>Ethererum</ion-card-subtitle>
 			<ion-card-title>R$ 5969</ion-card-title>
 		</ion-card-header>
-
+		
 		<ion-card-content>
-			<img src="assets/img/grafico.png" />
+			<google-chart [data]="candlestickChart"></google-chart>
 		</ion-card-content>
 	</ion-card>
 	<ion-fab vertical="bottom" horizontal="end" slot="fixed">
