Funcao data atual e mensal

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -31,6 +31,8 @@
 		
 		<ion-card-content>
 			<google-chart [data]="candlestickChart"></google-chart>
+			<ion-card-subtitle>Media:{{xrpAVG}}</ion-card-subtitle>
+			<ion-card-subtitle>Data:{{dataAtual}}</ion-card-subtitle>
 			<canvas></canvas>
 		</ion-card-content>
 	</ion-card>
