--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -13,5 +13,28 @@
 	<div class="ion-text-center">
 		<h1>Links Imporantes</h1>
 		<h2>www.mercadobitcoin.com.br</h2>
+		<!-- TradingView Widget BEGIN -->
+		<div class="tradingview-widget-container">
+			<div class="tradingview-widget-container__widget"></div>
+			<div class="tradingview-widget-copyright">
+				<a href="https://br.tradingview.com/symbols/BTCUSD/technicals/" rel="noopener" target="_blank"
+					><span class="blue-text">Análise Técnica de BTCUSD</span></a
+				>
+				por TradingView
+			</div>
+			<script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-technical-analysis.js" async>
+				{
+				"interval" = "1m",
+				"width" = "425",
+				"isTransparent" = false,
+				"height" = "450",
+				"symbol" = "BITSTAMP =BTCUSD",
+				"showIntervalTabs" = true,
+				"locale" = "br",
+				"colorTheme" = "light"
+				 }
+			</script>
+		</div>
+		<!-- TradingView Widget END -->
 	</div>
 </ion-content>
