--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -4,16 +4,17 @@
 	</ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content [fullscreen]="true" class="main">
 	<ion-header collapse="condense">
 		<ion-toolbar>
 			<ion-title size="large">Convertor</ion-title>
 		</ion-toolbar>
 	</ion-header>
 	<div class="ion-text-center">
+		<br><br><br>
 		<ion-item>
 			<ion-label>Moeda</ion-label>
-			<ion-select name="moeda1" [(ngModel)]="cbMoeda1" placeholder="Selecionar Moeda">
+			<ion-select name="moeda1" [(ngModel)]="cbMoeda1" placeholder="$">
 				<ion-select-option value="BTC">Bitcoin</ion-select-option>
 				<ion-select-option value="ETH">Ethereum</ion-select-option>
 				<ion-select-option value="BCH">Bitcoin Cash</ion-select-option>
@@ -31,7 +32,7 @@
 		</ion-item>
 		<ion-item>
 			<ion-label>Moeda</ion-label>
-			<ion-select name="moeda2" [(ngModel)]="cbMoeda2" placeholder="Selecionar Moeda">
+			<ion-select name="moeda2" [(ngModel)]="cbMoeda2" placeholder="$">
 				<ion-select-option value="real">Real</ion-select-option>
 				<ion-select-option value="dolar">Dólar</ion-select-option>
 			</ion-select> </ion-item
