Botão de Favoritar

--- a/src/app/info/info.page.html
+++ b/src/app/info/info.page.html
@@ -59,4 +59,9 @@
 			<p>{{sell}}</p>
 		</ion-card-content>
 	</ion-card>
+	<ion-fab vertical="bottom" horizontal="end" slot="fixed">
+		<ion-fab-button>
+			<ion-icon name="{{icone}}" (click)="favoritar()"></ion-icon>
+		</ion-fab-button>
+	</ion-fab>
 </ion-content>
