Alterações em Tudo

--- a/src/app/info/info.page.html
+++ b/src/app/info/info.page.html
@@ -6,6 +6,11 @@
 
 <ion-content>
 	<ion-card>
+		<ion-card-content>
+			<google-chart [data]="graph"></google-chart>
+		</ion-card-content>
+	</ion-card>
+	<ion-card>
 		<ion-card-header>
 			<ion-card-title>Alta</ion-card-title>
 		</ion-card-header>
