Problema do Gráfico Resolvido

--- a/src/app/info/info.page.html
+++ b/src/app/info/info.page.html
@@ -7,7 +7,7 @@
 <ion-content>
 	<ion-card>
 		<ion-card-content>
-			<google-chart [data]="graph"></google-chart>
+			<canvas #lineCanvas style="position: relative; height: 20vh; width: 40vw"></canvas>
 		</ion-card-content>
 	</ion-card>
 	<ion-card>
