Desenvolvimento de Telas e Acabamentos

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -2,6 +2,7 @@
 	<ion-toolbar>
 		<ion-title> Home </ion-title>
 	</ion-toolbar>
+	<ion-progress-bar id="progressBar" style="display: {{loading}}" type="indeterminate"></ion-progress-bar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
