--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -12,8 +12,8 @@
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
-      <ion-icon name="globe"></ion-icon>
-      <ion-label>Acessos</ion-label>
+      <ion-icon name="rocket"></ion-icon>
+      <ion-label>Investimentos</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
