--- a/src/app/info/info.page.html
+++ b/src/app/info/info.page.html
@@ -1,6 +1,8 @@
 <ion-header>
 	<ion-toolbar>
+		<ion-item><ion-icon name="chevron-back-outline" (click)="voltar();"></ion-icon>
 		<ion-title>{{title}}</ion-title>
+	</ion-item>
 	</ion-toolbar>
 </ion-header>
 
