--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -16,17 +16,21 @@
 		</ion-item>
 		<ion-card-content>
 			<p class="valorInicial">Valor Inicial: {{elemento.valorInicial}}</p>
-			<p class="valorAtual">{{elemento.valorAtual}}</p></ion-card-content>
-			<ion-item-sliding>
-				<ion-item-options side="end">
-				  <ion-item-option color="danger" expandable>
+			<p class="valorAtual">{{elemento.valorAtual}}</p></ion-card-content
+		>
+		<ion-item-sliding>
+			<ion-item-options side="end">
+				<ion-item-option color="danger" expandable>
 					<ion-icon slot="icon-only" name="trash" (click)="remover(i);"></ion-icon>
-				  </ion-item-option>
-				</ion-item-options>
-				<ion-item>
-					<ion-icon slot="end" name="arrow-back-outline"></ion-icon>
-				</ion-item>
-			  </ion-item-sliding>
+				</ion-item-option>
+			</ion-item-options>
+			<ion-item>
+				<ion-icon slot="end" name="arrow-back-outline"></ion-icon>
+			</ion-item>
+		</ion-item-sliding>
+	</ion-card>
+	<ion-card>
+		<ion-item> </ion-item>
 	</ion-card>
 	<ion-fab vertical="bottom" horizontal="end" slot="fixed">
 		<ion-fab-button>
